feat: TICKET-00000 updated Basics and EnumEtalon